--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -31,10 +31,11 @@
     section {
         margin: 0.5%
     }
-    .section_pic-container {
-        width: 275px;
-        height: 275px;
-        margin: 0 auto 2rem;
+    .section__pic-container {
+        width: auto;
+        height: 30vw;
+        margin: 0 auto 0.5rem;
+        justify-content: center;
     }
     .about-containers {
         margin-top: 0;
@@ -58,7 +59,8 @@
     }
     .about-containers, 
     .contact-info-upper-container, 
-    .btn-container {
+    .btn-container,
+    .misc {
         flex-wrap: wrap;
     }
     .contact-info-container {
@@ -79,11 +81,6 @@
         gap: 0.5rem;
         text-align: center;
     }
-    .section__pic-container {
-        width: auto;
-        height: 46vw;
-        justify-content: center;
-    }
     .section__text__p2 {
         font-size: 1.25rem;
     }
@@ -92,6 +89,22 @@
     }
     .text-container {
         text-align: justify;
+    }
+    .video-container {
+        display: block;
+    }
+    .video {
+        width: 100%;
+    }
+    .section__text__half {
+        margin-left: 0rem;
+        max-width: 100%;
+    }
+    .misc {
+        width: 100%;
+    }
+    .btn {
+        width: 30%;
     }
 
 }
