--- a/style.css
+++ b/style.css
@@ -7,8 +7,10 @@
     padding: 0;
 }
 
+
 body {
     font-family: 'Poppins', sans-serif;
+    background: linear-gradient(to bottom, rgb(255, 255, 255), rgb(245, 255, 255));
 }
 
 html {
@@ -35,7 +37,7 @@ nav, .nav-links {
 nav {
     justify-content: space-around;
     align-items: center;
-    height: 17vh;
+    height: 10vh;
 }
 
 .nav-links {
@@ -100,12 +102,12 @@ a:hover {
     width: fit-content;
     max-height: 0;
     overflow: hidden;
-    transition: all 0.3 ease-in-out;
+    transition: all 1 ease-in-out;
 }
 
 .menu-links a {
     display: block;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     font-size: 1.5rem;
     color: black;
@@ -147,7 +149,7 @@ a:hover {
 /* SECTIONS */
 
 section {
-    padding-top: 4vh;
+    padding-top: 0vh;
     height: 96vh;
     margin: 0 10rem;
     box-sizing: border-box;
@@ -169,8 +171,8 @@ section {
 
 .section__pic-container {
     display: flex;
-    height: 400px;
-    width: 400px;
+    height: 350px;
+    width: 350px;
     margin: auto 0;
 }
 
@@ -200,7 +202,7 @@ section {
 #socials-container {
     display: flex;
     justify-content: center;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     gap: 1rem;
 }
 
@@ -211,19 +213,32 @@ section {
     height: 2rem;
 }
 
+.left-icon {
+    margin-right: 340px;
+    margin-top: 5px;
+}
+
+.fab,
+.fas {
+    font-size: 30px;
+    color: #000;
+    transition: all 300ms ease;
+}
+
 /* BUTTONS */
 
 .btn-container {
     display: flex;
     justify-content: center;
+    margin-top: 0.5rem;
     gap: 1rem;
 }
 
 .btn {
-    font-weight: 600;
+    font-weight: 1000;
     transition: all 300ms ease;
-    padding: 1rem;
-    width: 8rem;
+    padding: 0.5rem;
+    width: 7.5rem;
     border-radius: 2rem;
 }
 
@@ -239,7 +254,7 @@ section {
 
 .btn-color-1, 
 .btn-color-2:hover {
-    background: rgb(53,53,53);
+    background: rgb(175, 195, 211);
     color: white;
 }
 
@@ -251,12 +266,55 @@ section {
     background: none;
 }
 
-.btn-color-2:hover{
+.btn-color-2:hover {
     border: rgb(255,255,255) 0.1rem solid;
+}
+
+.btn-color-2:hover .fab {
+    color: #fff;
 }
 
 .btn-container {
     gap: 1rem;
+}
+
+/* MISC LINKS */
+
+.misc-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 0.5rem;
+    gap: 1rem;
+}
+
+.misc {
+    width: 25.5rem;
+    height: 4rem;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 2rem;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+
+.misc-button1 {
+    background: none;
+    border: rgb(53,53,53) 0.1rem solid;
+}
+
+.misc-button1:hover{
+    background: rgb(175, 195, 211);
+    color: white;
+    border: rgb(255,255,255) 0.1rem solid;
+}
+
+.misc-button1:hover .fas{
+    color: white;
+}
+
+.text-center {
+    transform: translateY(-132%);
 }
 
 /* ABOUT SECTION */
@@ -265,91 +323,29 @@ section {
     position: relative;
 }
 
-.about-containers {
-    gap: 2rem;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
-}
-
-.about-details-container {
-    justify-content: center;
-    flex-direction: column;
-}
-
-.about-containers,
-.about-details-container {
-    display: flex;
-}
-
-.about-pic {
-    border-radius: 2rem;
-}
-
 .arrow {
     position: absolute;
     right: -5rem;
     bottom: 2.5rem;
 }
 
-.details-container {
-    padding: 1.5rem;
-    flex: 1;
-    background: white;
-    border-radius: 2rem;
-    border: rgb(53,53,53) 0.1rem solid;
-    border-color: rgb(163,163,163);
-    text-align: center;
-}
-
-.section-container {
-    gap: 4rem;
-    height: 80%;;
-}
-
-.section__pic-container {
-    height: 400px;
-    width: 400px;
-    margin: auto 0;
-}
-
-/* EXPERIENCE SECTION */
-
-#experience {
-    position: relative;
-}
-
-.experience-sub-title {
-    color: rgb(85,85,85);
-    font-weight: 600;
-    font-size: 1.75rem;
-    margin-bottom: 2rem;
-}
-
-.experience-details-container {
+.video-container {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: left;
 }
 
-.article-container {
-    display: flex;
-    text-align: initial;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 2.5rem;
-    justify-content: space-around;
+.video {
+    aspect-ratio: 16/9;
+    width: 50%;
 }
 
-article {
-    display: flex;
-    width: 10rem;
-    justify-content: space-around;
-    gap: 0.5rem;
+.section__text__half {
+    margin-left: 1rem;
+    max-width: 40%;
 }
 
-article.icon {
-    cursor: default;
-}
+
+
 
 /* CONTACT */
 
