added insta360 drop down feature

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -29,7 +29,7 @@
         height: fit-content;
     }
     section {
-        margin: 0.5%
+        margin: 0.5rem
     }
     .section__pic-container {
         width: auto;
@@ -60,7 +60,9 @@
     .about-containers, 
     .contact-info-upper-container, 
     .btn-container,
-    .misc {
+    .misc,
+    .dropdown,
+    .dropdown a {
         flex-wrap: wrap;
     }
     .contact-info-container {
@@ -99,9 +101,14 @@
     .section__text__half {
         margin-left: 0rem;
         max-width: 100%;
+        text-align: center;
     }
-    .misc {
+    .misc,
+    .dropdown {
         width: 100%;
+    }
+    .dropdown a {
+        width: 99%;
     }
     .btn {
         width: 30%;
