--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(to bottom, rgb(255, 255, 255), rgb(245, 255, 255));
+    background: linear-gradient(to bottom, rgb(255, 255, 255), rgb(240, 250, 255));
 }
 
 html {
@@ -112,7 +112,7 @@ a:hover {
     font-size: 1.5rem;
     color: black;
     text-decoration: none;
-    transition: all 0.3 ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .menu-links li {
@@ -313,8 +313,61 @@ section {
     color: white;
 }
 
-.text-center {
+.misc-center {
     transform: translateY(-132%);
+}
+
+/* DROPDOWN */
+.dropdown-container {
+    position: relative;
+    display: inline-block;
+    justify-content: center;
+    margin-top: 0.5rem;
+    margin-left: -0.5rem;
+    gap: 1rem;
+}
+.dropdown {
+    width: 25.5rem;
+    height: 4rem;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2rem;
+    cursor: pointer;
+    background: none;
+    border: rgb(53,53,53) 0.1rem solid;
+    transition: all 300ms ease;
+}
+button.dropdown:hover{
+    background: rgb(175, 195, 211);
+    color: white;
+    border: rgb(255,255,255) 0.1rem solid;
+}
+.dropcontent a{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin-top: 0.5rem;
+    bottom: 130px;
+    width: 25.5rem;
+    height: 2rem;
+    align-items: center;
+    border-radius: 2rem;
+    cursor: pointer;
+    background: none;
+    border: rgb(53,53,53) 0.1rem solid;
+    transition: all 300ms ease-out;
+    text-decoration: none;
+}
+.dropcontent a:hover{
+    background: rgb(175, 195, 211);
+    color: white;
+    border: rgb(255,255,255) 0.1rem solid;
+}
+.dropdown.active ~ .dropcontent a{
+    bottom: 0;
+}
+.dropcontent {
+    overflow: hidden;
 }
 
 /* ABOUT SECTION */
@@ -350,7 +403,8 @@ section {
 /* CONTACT */
 
 #contact {
-    display: flex;
+    display: relative;
+    margin-top: 5rem;
     justify-content: center;
     flex-direction: column;
     height: 70vh;
@@ -363,7 +417,7 @@ section {
     border: rgb(53,53,53) 0.1rem solid;
     border-color: rgb(163,163,163);
     background: (250,250,250);
-    margin: 2rem auto;
+    margin: 0.5rem auto;
     padding: 0.5rem;
 }
 
