--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     padding: 0;
 }
 
-
 body {
     font-family: 'Poppins', sans-serif;
     background: linear-gradient(to bottom, rgb(255, 255, 255), rgb(240, 250, 255));
@@ -22,62 +21,51 @@ p {
 }
 
 /* TRANSITION */
-
 a, 
 .btn {
     transition: all 300ms ease;
 }
 
 /* DESKTOP NAV */
-
 nav, .nav-links {
     display: flex;
 }
-
 nav {
     justify-content: space-around;
     align-items: center;
     height: 10vh;
 }
-
 .nav-links {
     gap: 2rem;
     list-style: none;
     font-size: 1.5rem;
 }
-
 a {
     color: black;
     text-decoration: none;
     text-decoration-color: white;
 }
-
 a:hover {
     color: grey;
     text-decoration: underline;
     text-underline-offset: 1rem;
     text-decoration-color: rgb(181, 181, 181);
 }
-
 .logo {
     font-size: 2rem;
 }
-
 .logo:hover {
     cursor: default;
 }
 
 /* HAMBURGER MENU */
-
 #hamburger-nav {
     display: none;
 }
-
 .hamburger-menu {
     position: relative;
     display: inline-block;
 }
-
 .hamburger-icon {
     display: flex;
     flex-direction: column;
@@ -86,14 +74,12 @@ a:hover {
     width: 30px;
     cursor: pointer;
 }
-
 .hamburger-icon span {
     width: 100%;
     height: 2px;
     background-color: black;
     transition: all 0.3 ease-in-out;
 }
-
 .menu-links {
     position: absolute;
     top: 100%;
@@ -104,7 +90,6 @@ a:hover {
     overflow: hidden;
     transition: all 1 ease-in-out;
 }
-
 .menu-links a {
     display: block;
     padding: 5px;
@@ -114,31 +99,24 @@ a:hover {
     text-decoration: none;
     transition: all 0.3s ease-in-out;
 }
-
 .menu-links li {
     list-style: none;
 }
-
 .menu-links.open {
     max-height: 300px;
 }
-
 .hamburger-icon.open span:first-child {
     transform: rotate(45deg) translate(10px, 5px);
 }
-
 .hamburger-icon.open span:nth-child(2) {
     opacity: 0;
 }
-
 .hamburger-icon.open span:last-child {
     transform: rotate(-45deg) translate(10px, -5px);
 }
-
 .hamburger-icon span:first-child {
     transform: none;
 }
-
 .hamburger-icon span:first-child {
     opacity: 1;
 }
@@ -147,7 +125,6 @@ a:hover {
 }
 
 /* SECTIONS */
-
 section {
     padding-top: 0vh;
     height: 96vh;
@@ -155,50 +132,42 @@ section {
     box-sizing: border-box;
     min-height: fit-content;
 }
-
 .section-container {
     display: flex;
 }
 
 /* PROFILE SECTION */
-
 #profile {
     display: flex;
     justify-content: center;
     gap: 5rem;
     height: 80vh;
 }
-
 .section__pic-container {
     display: flex;
     height: 350px;
     width: 350px;
     margin: auto 0;
 }
-
 .section__text {
     align-self: center;
     text-align: center;
 }
-
 .section__text p {
     font-weight: 600;
 }
-
 .section__text__p1 {
     text-align: center;
+    margin-top: 6.5rem;
 }
-
 .section__text__p2 {
     font-size: 1.75rem;
     margin-bottom: 1rem;
 }
-
 .title {
     font-size: 3rem;
     text-align: center;
 }
-
 #socials-container {
     display: flex;
     justify-content: center;
@@ -207,17 +176,18 @@ section {
 }
 
 /* ICONS */
-
 .icon {
     cursor: pointer;
     height: 2rem;
 }
-
 .left-icon {
     margin-right: 340px;
     margin-top: 5px;
 }
-
+.drop-icon {
+    margin-right: 340px;
+    margin-top: 15px;
+}
 .fab,
 .fas {
     font-size: 30px;
@@ -226,14 +196,12 @@ section {
 }
 
 /* BUTTONS */
-
 .btn-container {
     display: flex;
     justify-content: center;
     margin-top: 0.5rem;
     gap: 1rem;
 }
-
 .btn {
     font-weight: 1000;
     transition: all 300ms ease;
@@ -241,52 +209,42 @@ section {
     width: 7.5rem;
     border-radius: 2rem;
 }
-
 .btn-color-1, 
 .btn-color-2 {
     border: rgb(53,53,53) 0.1rem solid;
 }
-
 .btn-color-1:hover, 
 .btn-color-2:hover {
     cursor: pointer;
 }
-
 .btn-color-1, 
 .btn-color-2:hover {
     background: rgb(175, 195, 211);
     color: white;
 }
-
 .btn-color-1:hover {
     background: rgb(0,0,0);
 }
-
 .btn-color-2 {
     background: none;
 }
-
 .btn-color-2:hover {
     border: rgb(255,255,255) 0.1rem solid;
 }
-
 .btn-color-2:hover .fab {
     color: #fff;
 }
-
 .btn-container {
     gap: 1rem;
 }
 
 /* MISC LINKS */
-
 .misc-container {
     display: flex;
     justify-content: center;
     margin-top: 0.5rem;
     gap: 1rem;
 }
-
 .misc {
     width: 25.5rem;
     height: 4rem;
@@ -297,22 +255,18 @@ section {
     cursor: pointer;
     transition: all 300ms ease;
 }
-
 .misc-button1 {
     background: none;
     border: rgb(53,53,53) 0.1rem solid;
 }
-
 .misc-button1:hover{
     background: rgb(175, 195, 211);
     color: white;
     border: rgb(255,255,255) 0.1rem solid;
 }
-
 .misc-button1:hover .fas{
     color: white;
 }
-
 .misc-center {
     transform: translateY(-132%);
 }
@@ -323,13 +277,10 @@ section {
     display: inline-block;
     justify-content: center;
     margin-top: 0.5rem;
-    margin-left: -0.5rem;
-    gap: 1rem;
 }
 .dropdown {
     width: 25.5rem;
     height: 4rem;
-    align-items: center;
     justify-content: center;
     border-radius: 2rem;
     cursor: pointer;
@@ -337,10 +288,13 @@ section {
     border: rgb(53,53,53) 0.1rem solid;
     transition: all 300ms ease;
 }
-button.dropdown:hover{
+.dropdown:hover{
     background: rgb(175, 195, 211);
     color: white;
     border: rgb(255,255,255) 0.1rem solid;
+}
+.dropdown:hover .fas{
+    color: white;
 }
 .dropcontent a{
     position: relative;
@@ -350,7 +304,6 @@ button.dropdown:hover{
     bottom: 130px;
     width: 25.5rem;
     height: 2rem;
-    align-items: center;
     border-radius: 2rem;
     cursor: pointer;
     background: none;
@@ -363,45 +316,53 @@ button.dropdown:hover{
     color: white;
     border: rgb(255,255,255) 0.1rem solid;
 }
-.dropdown.active ~ .dropcontent a{
+.dropdown.active ~ .dropcontent a {
     bottom: 0;
 }
 .dropcontent {
     overflow: hidden;
 }
+.text-drop-center {
+    transform: translateY(-135%);
+}
+.arrow1 {
+    position: absolute;
+    right: 5rem;
+    bottom: 2.5rem;
+}
 
 /* ABOUT SECTION */
-
 #about {
     position: relative;
 }
-
-.arrow {
+.arrow2 {
     position: absolute;
     right: -5rem;
     bottom: 2.5rem;
 }
-
 .video-container {
     display: flex;
     justify-content: left;
+    flex-direction: row;
+    gap: 1rem;
 }
-
+.yt-container {
+    display: flex;
+    flex-direction: column;
+}
 .video {
     aspect-ratio: 16/9;
-    width: 50%;
+    width: 100%;
 }
-
 .section__text__half {
-    margin-left: 1rem;
-    max-width: 40%;
+    max-width: 100%;
 }
-
-
-
+.insta-container {
+    aspect-ratio: 9/16;
+    width: 48%;
+}
 
 /* CONTACT */
-
 #contact {
     display: relative;
     margin-top: 5rem;
@@ -409,7 +370,6 @@ button.dropdown:hover{
     flex-direction: column;
     height: 70vh;
 }
-
 .contact-info-upper-container {
     display: flex;
     justify-content: center;
@@ -420,7 +380,6 @@ button.dropdown:hover{
     margin: 0.5rem auto;
     padding: 0.5rem;
 }
-
 .contact-info-container {
     display: flex;
     align-items: center;
@@ -428,7 +387,6 @@ button.dropdown:hover{
     gap: 0.5rem;
     margin: 1rem;
 }
-
 .contact-info-container p {
     font-size: larger;
 }
@@ -436,18 +394,24 @@ button.dropdown:hover{
 .contact-icon {
     cursor: default;
 }
-
 .email-icon{
     height: 2.5rem;
 }
 
 /* FOOTER SECTION */
-
+.bot-nav-links-container {
+    margin-top: 0rem;
+}
+.bot-nav-links {
+    display: flex;
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.5rem;
+}
 footer {
     height: 26vh;
     margin: 0 1rem;
 }
-
 footer p{
     text-align: center;
 }
