--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(to bottom, rgb(255, 255, 255), rgb(240, 250, 255));
+    background: linear-gradient(to bottom, rgb(255, 255, 255), rgb(235, 245, 250));
 }
 
 html {
@@ -18,6 +18,10 @@ html {
 
 p {
     color: rgb(85, 85 85);
+}
+
+h3 {
+    color: black;
 }
 
 /* TRANSITION */
