fixed h3 this time

--- a/style.css
+++ b/style.css
@@ -20,11 +20,6 @@ p {
     color: rgb(29, 29, 29);
 }
 
-.h3-text {
-    font-size: medium;
-    font-weight: 600;
-}
-
 /* TRANSITION */
 a, 
 .btn {
@@ -217,6 +212,7 @@ section {
 .btn-color-1, 
 .btn-color-2 {
     border: rgb(53,53,53) 0.1rem solid;
+    color: rgb(0,0,0);
 }
 .btn-color-1:hover, 
 .btn-color-2:hover {
@@ -263,6 +259,7 @@ section {
 .misc-button1 {
     background: none;
     border: rgb(53,53,53) 0.1rem solid;
+    color: rgb(0,0,0);
 }
 .misc-button1:hover{
     background: rgb(175, 195, 211);
@@ -284,6 +281,7 @@ section {
     margin-top: 0.5rem;
 }
 .dropdown {
+    color: rgb(0,0,0);
     width: 25.5rem;
     height: 4rem;
     justify-content: center;
@@ -302,6 +300,7 @@ section {
     color: white;
 }
 .dropcontent a{
+    color: rgb(0,0,0);
     position: relative;
     display: flex;
     justify-content: center;
